# emodule-creator

./: .gitignore  README.md
usr/share/emodule-creator/data/example01/: AUTHORS  HOHO.edc  configure.in  e_modules-HOHO.spec.in
usr/share/emodule-creator/data/example01/src/: Makefile.am  e_mod_main.c  e_mod_main.h
usr/share/emodule-creator/data/example02/: Makefile.am  e_modules-HOHO.spec.in  module.desktop.in
usr/share/emodule-creator/data/example02/src/: Makefile.am  e_mod_main.c  e_mod_main.h
usr/share/emodule-creator/data/example03/: ChangeLog  Makefile.am  configure.ac  module.desktop.in
usr/share/emodule-creator/data/example03/src/: Makefile.am  e_mod_main.c  e_mod_main.h
usr/share/emodule-creator/data/example04/: configure.ac  e-module-HOHO.edc  module.desktop.in
usr/share/emodule-creator/data/example04/src/: Makefile.am  e_mod_config.c  e_mod_main.c  e_mod_main.h
usr/share/emodule-creator/data/example05/: Makefile.am  configure.ac  e-module-HOHO.edc  module.desktop.in
usr/share/emodule-creator/data/example05/src/: Makefile.am  e_mod_config.c  e_mod_main.c  e_mod_main.h
usr/share/emodule-creator/data/example06/: .gitignore  Makefile.am  README  configure.ac  e_modules-HOHO.spec.in  module.desktop.in  skeletor.edc
usr/share/emodule-creator/data/example06/data/: Makefile.am  launcher.sh
usr/share/emodule-creator/data/example06/script/: launcher.sh
usr/share/emodule-creator/data/example06/src/: e_mod_config.c  e_mod_main.c  e_mod_main.h
usr/share/emodule-creator/data/example07/: .gitignore  Makefile.am  README  configure.ac  module.desktop.in
usr/share/emodule-creator/data/example07/data/: launcher.sh
usr/share/emodule-creator/data/example07/src/: e_mod_config.c  e_mod_main.c  e_mod_main.h
